Tue Jul 31 14:12:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype.mpc:
          Added genostream as base project

Tue Jul 31 12:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Abstract_Servant_Base.h:
          Fixed typo in comment

        * tao/PortableServer/Adapter_Activator.h:
          Layout change

        * tao/PortableServer/POA.pidl:
        * tao/PortableServer/POAManagerFactory.pidl:
          Fixed a few ifdef checks so that also minimum corba with BCB
          can be used

        * tao/PortableServer/Servant_Base.{h,cpp}:
          Don't make methods dependent on CORBA/e or Minimum Corba. This
          makes it possible to use the -Gce and -Gmc options on the IDL
          files. When all generated files are removed from the repo the
          checks can be added again, created bugzilla 3019 as reminder for
          this.

        * MPC/config/corba_e_compact.mpb:
        * MPC/config/corba_e_micro.mpb:
        * MPC/config/core_minimum_corba.mpb:
          Added -Gce and -Gmc again

Tue Jul 31 12:22:20 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/run_test.pl:

          Set the executable property on this script.

Tue Jul 31 11:36:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDir_Policy_i.cpp:
        * tao/Policy_Current.cpp:
        * tao/Policy_Current.h:
        * tao/Policy_Current_Impl.h:
        * tao/Policy_Manager.inl:
        * tao/Policy_Set.cpp:
        * tao/PortableServer/Default_Policy_Validator.cpp:
        * tao/PortableServer/POA_Policy_Set.h:
        * tao/Stub.cpp:
          Layout changes

Tue Jul 31 11:35:53 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/CosNotification.mpc:
        * orbsvcs/orbsvcs/Makefile.am:

          Added the tao_versioning_idl_defaults base project to the
          CosNotification_MC project.
