@@ -64,7 +64,7 @@ main (int argc, char* argv[])
       const char* ior_file_name = "Consumer.ior";
       FILE *output_file=
 	ACE_OS::fopen (ACE_TEXT_CHAR_TO_TCHAR(ior_file_name),
-		       ACE_LIB_TEXT("w"));
+           ACE_TEXT("w"));
       if (output_file == 0)
 	ACE_ERROR_RETURN ((LM_ERROR,
 			   "Cannot open output file for writing IOR: %s",
